[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi-users[oauth,sqlalchemy]>=15.0.3",
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "slugify>=0.0.1",
    "supabase>=2.27.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]
